sigue fallando las imagenes

--- a/ProyectoFinalMoviles/app/src/main/AndroidManifest.xml
+++ b/ProyectoFinalMoviles/app/src/main/AndroidManifest.xml
@@ -8,22 +8,28 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/cmlogoblue1___vertical"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/cmlogoblue1___vertical"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoFinalMoviles"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".ProductDetailActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".MenuActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
